<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_2"
    tools:context=".Playlists">

    <TextView
        android:id="@+id/txtPlaylistTitleMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fuente1"
        android:text="@string/myPlaylists"
        android:textColor="@color/black"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038" />

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/button_border"
        android:onClick="gotoCreatePlaylist"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPlaylistTitleMenu"
        app:layout_constraintVertical_bias="0.01" />

    <TextView
        android:id="@+id/txtCreatePlaylist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btnCreate"
        app:layout_constraintEnd_toEndOf="@+id/btnCreate"
        app:layout_constraintStart_toStartOf="@+id/btnCreate"
        app:layout_constraintTop_toTopOf="@+id/btnCreate"
        app:layout_constraintVertical_bias="0.51" />


    <Button
        android:id="@+id/btnDeletePlaylist"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/button_border"
        android:onClick="deletePlaylist"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCreate"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/txtDeletePlaylist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btnDeletePlaylist"
        app:layout_constraintEnd_toEndOf="@+id/btnDeletePlaylist"
        app:layout_constraintStart_toStartOf="@+id/btnDeletePlaylist"
        app:layout_constraintTop_toTopOf="@+id/btnDeletePlaylist"
        app:layout_constraintVertical_bias="0.51" />

    <Button
        android:id="@+id/btnManageSongsPlaylist"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/button_border"
        android:onClick="gotoAllSongs"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDeletePlaylist"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/txtManageSongsPlaylist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manageSongs"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btnManageSongsPlaylist"
        app:layout_constraintEnd_toEndOf="@+id/btnManageSongsPlaylist"
        app:layout_constraintStart_toStartOf="@+id/btnManageSongsPlaylist"
        app:layout_constraintTop_toTopOf="@+id/btnManageSongsPlaylist"
        app:layout_constraintVertical_bias="0.51" />
    <Button
        android:id="@+id/btnBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/button_border"
        android:backgroundTintMode="add"
        android:onClick="gotoMenu"
        android:textColorHighlight="#000000"
        android:textColorHint="#000000"
        android:textColorLink="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtPlaylistTitleMenu"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnBack"
        app:layout_constraintEnd_toEndOf="@+id/btnBack"
        app:layout_constraintStart_toStartOf="@+id/btnBack"
        app:layout_constraintTop_toTopOf="@+id/btnBack"
        app:srcCompat="@drawable/back" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPlaylistList"
        android:layout_width="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_height="400dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnManageSongsPlaylist"
        app:layout_constraintVertical_bias="0.157" />

</androidx.constraintlayout.widget.ConstraintLayout>