<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_2"
    tools:context=".Playlists">

    <TextView
        android:id="@+id/txtCreatePlaylistTitleMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fuente1"
        android:text="@string/allSongs"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038" />

    <Button
        android:id="@+id/btnAddSong"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/button_border"
        android:onClick="uploadSong"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCreatePlaylistTitleMenu"
        app:layout_constraintVertical_bias="0.041" />

    <TextView
        android:id="@+id/txtCreatePlaylistBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uploadSong"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btnAddSong"
        app:layout_constraintEnd_toEndOf="@+id/btnAddSong"
        app:layout_constraintStart_toStartOf="@+id/btnAddSong"
        app:layout_constraintTop_toTopOf="@+id/btnAddSong"
        app:layout_constraintVertical_bias="0.51" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/button_border"
        android:backgroundTint="#00000000"
        android:backgroundTintMode="add"
        android:onClick="gotoPlaylists"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtCreatePlaylistTitleMenu"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnBack"
        app:layout_constraintEnd_toEndOf="@+id/btnBack"
        app:layout_constraintStart_toStartOf="@+id/btnBack"
        app:layout_constraintTop_toTopOf="@+id/btnBack"
        app:srcCompat="@drawable/back" />

    <ImageView
        android:id="@+id/imgPlus"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnAddSong"
        app:layout_constraintEnd_toEndOf="@+id/btnAddSong"
        app:layout_constraintStart_toEndOf="@+id/txtCreatePlaylistBtn"
        app:layout_constraintTop_toTopOf="@+id/btnAddSong"
        app:srcCompat="@drawable/baseline_add_24"/>

    <Button
        android:id="@+id/btnRemoveSongs"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:visibility="visible"
        android:layout_marginTop="4dp"
        android:background="@drawable/button_border"
        android:onClick="removeSongs"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAddSong"
        app:layout_constraintVertical_bias="0.041" />

    <TextView
        android:id="@+id/txtRemoveSongs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:text="@string/removeSongs"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btnRemoveSongs"
        app:layout_constraintEnd_toEndOf="@+id/btnRemoveSongs"
        app:layout_constraintStart_toStartOf="@+id/btnRemoveSongs"
        app:layout_constraintTop_toTopOf="@+id/btnRemoveSongs"
        app:layout_constraintVertical_bias="0.51" />

    <ImageView
        android:id="@+id/imgMinusRemoveNP"
        android:layout_width="40dp"
        android:visibility="visible"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnRemoveSongs"
        app:layout_constraintEnd_toEndOf="@+id/btnRemoveSongs"
        app:layout_constraintStart_toEndOf="@+id/txtRemoveSongs"
        app:layout_constraintTop_toTopOf="@+id/btnRemoveSongs"
        app:srcCompat="@drawable/baseline_remove_24"/>

    <Button
        android:id="@+id/btnRemoveAccept"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:background="@drawable/button_accept_np"
        android:onClick="acceptRemove"
        android:text="Accept"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/btnRemoveSongs"
        app:layout_constraintEnd_toEndOf="@+id/btnRemoveSongs"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnRemoveSongs"
        app:layout_constraintTop_toTopOf="@+id/btnRemoveSongs"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnRemoveCancel"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:visibility="invisible"
        android:background="@drawable/button_decline_np"
        android:text="Cancel"
        android:textSize="25sp"
        android:textStyle="bold"
        android:onClick="removeSongs"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/btnRemoveSongs"
        app:layout_constraintEnd_toEndOf="@+id/btnRemoveSongs"
        app:layout_constraintTop_toTopOf="@+id/btnRemoveSongs"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSongsList"
        android:layout_width="370dp"
        android:layout_height="484dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRemoveSongs"
        app:layout_constraintVertical_bias="0.157" />

</androidx.constraintlayout.widget.ConstraintLayout>